fix: add invisible drag handle to settings window (#989)

--- a/frontend/app/src/styles/settings.scss
+++ b/frontend/app/src/styles/settings.scss
@@ -1,3 +1,6 @@
+@use 'mixins/platform';
+@use 'variables' as *;
+
 .settings-wrapper {
   position: fixed;
   inset: 0;
@@ -54,6 +57,13 @@
     &[data-state='inactive'] {
       display: none;
     }
+  }
+
+  .drag-handle {
+    position: fixed;
+    z-index: 999;
+    width: 100vw;
+    height: $darwin-title-bar-height;
   }
 }
 
